k8s/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pd-care
spec:
  tls:
    - hosts:
        - test.pd.lu.im.ntu.edu.tw
      secretName: test-pd-lu-im-ntu-edu-tw-tls
  rules:
    - host: test.pd.lu.im.ntu.edu.tw
